Minimum font-size wasn't working if no font props was specified, b=163785, r=dbaron, sr=bzbarsky